Package: psCBS
==============

Version: 0.9.41 [2011-02-03]
o Added argument 'tauTCN' to estimateTauAB().


Version: 0.9.40 [2011-01-27]
o Added argument 'flavor' to estimateTauAB() for estimating the
  AB threshold using alternative methods.


Version: 0.9.39 [2011-01-19]
o Added trial version of new plotTracks2(), which will later replace
  plotTracks().  Currently it only works for single chromosomes.
o Added support functions, e.g. updateMeans().


Version: 0.9.38 [2011-01-18]
o DOCUMENTATION: Documented more plotTracks() arguments for PairedPSCBS.
o BUG FIX: Now plotTracks(..., add=TRUE) for PairedPSCBS plots to 
  the current figure/panel.
o Now plotTracks(..., add=FALSE) for PairedPSCBS only sets up subplots
  if argument 'tracks' specifies more than one panel.
o Added arguments 'changepoints' and 'col' to plotTracks() for PairedPSCBS.


Version: 0.9.37 [2011-01-18]
o BUG FIX: 'tcnSegRows' and 'dhSegRows' where not updated by
  extractByRegions() for PairedPSCBS.


Version: 0.9.36 [2011-01-14]
o Added estimateTauAB() for estimating the tauAB tuning parameter
  when calling segments in allelic balance.  Updated 
  example(segmentByPairedPSCBS) to illustrate how to use it.
o Added extractByRegions() for PairedPSCBS.


Version: 0.9.35 [2011-01-12]
o Now postsegmentTCN(..., force=TRUE) for PairedPSCBS also updates
  the TCN estimates even for segments where the DH segmentation did
  not find any additional change points.


Version: 0.9.34 [2010-12-09]
o BUG FIX: When there were multiple chromsomes processed by
  segmentByPairedPSCBS(), then the returned data object would
  contain 'betaT' identical to 'betaTN'.


Version: 0.9.33 [2010-12-07]
o Added callLowC1ByC1() and callABandLowC1().


Version: 0.9.32 [2010-12-03]
o BUG FIX: In rare cases the bootstrap sanity checks can indeed produce
  an invalid 'range', more precisely where (range[,2] >= range[,1]) is
  not true.  This can happen if there is no variation in the bootstrap