@@ -2,6 +2,8 @@ Package: psCBS
 ==============
 
 Version: 0.9.41 [2011-02-03]
+o Updated default for 'tauAB' of callABandHighAI() and callABandLowC1()
+  to be estimated from data using estimateTauAB().
 o Added argument 'tauTCN' to estimateTauAB().
 
 
